--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Star wars character saver</string>
+    <string name="ok_hint">ok</string>
+    <string name="settings">settings</string>
+
+    <string name="welcome_text">Welcome, please choose one option</string>
+
+    <string name="permission_information_dialog.never_checked_message">You must go to settings click on permissions and allow the following permissions to use the application</string>
+    <string name="permission_information_dialog.message">You must accept the following permissions to use the application</string>
 </resources>
