--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Star wars character saver</string>
     <string name="ok_hint">ok</string>
@@ -13,6 +14,13 @@
     <string name="home_screen.species_option"> Species </string>
 
     <string name="characters_screen.title">Characters</string>
+    <string name="characters_screen.locallyObjects"> Characters list from database </string>
+    <string name="characters_screen.remoteObjects"> Characters list from API</string>
 
     <string name="species_screen.title">Species</string>
+    <string name="species_screen.locallyObjects">Species list from database</string>
+    <string name="species_screen.remoteObjects"> Species list from API</string>
+
+    <string name="from_database_data">Database List</string>
+    <string name="from_api_data">Api List</string>
 </resources>
