--- a/app/src/main/res/values-pt/strings.xml
+++ b/app/src/main/res/values-pt/strings.xml
@@ -27,6 +27,10 @@
     <string name="from_database_data">Banco de dados</string>
     <string name="from_api_data">Dados do servidor</string>
 
+    <string name="character_detail.name_hint">Nome </string>
     <string name="character_detail.mass_hint">Massa </string>
     <string name="character_detail.hair_hint">Cor do cabelo</string>
+
+    <string name="character_form.title">Formulário de personagens</string>
+
 </resources>
