--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="save">Save </string>
     <string name="edit">Edit </string>
     <string name="delete">Delete </string>
+    <string name="saved_success">Saved success</string>
+    <string name="deleted">Deleted </string>
 
     <string name="welcome_text">Welcome, please choose one option</string>
 
